--- a/index.html
+++ b/index.html
@@ -54,9 +54,6 @@
                      <li class="nav-item">
                         <a class="nav-link" href="services.html">Pemesanan</a>
                      </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-                     </li>
                   </ul>
                </div>
             </nav>
@@ -98,7 +95,7 @@
                            <div class="banner_taital">
                               <h1 class="outstanding_text">Coming Soon </h1>
                               <h1 class="coffee_text">Plajoe Printing</h1>
-                              <p class="there_text">Desain dan Cetak terbaik ada di kami, Plajoe Printing Slalu ada untuk anda </p>
+                              <p class="there_text">Plajoe Printing Slalu ada untuk anda </p>
                               <div class="learnmore_bt"><a href="#">Learn More</a></div>
                            </div>
                         </div>
