--- a/index.html
+++ b/index.html
@@ -72,7 +72,19 @@
                               <h1 class="outstanding_text">Always For You</h1>
                               <h1 class="coffee_text">Brownies Plajoe</h1>
                               <p class="there_text">Ada Cerita Di Setiap Gigitan </p>
-                              <div class="learnmore_bt"><a href="gallery.html">Learn More</a></div>
+                              <div class="learnmore_bt"><a href="gallery.html">Kunjungi</a></div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="carousel-item">
+                     <div class="row">
+                        <div class="col-sm-12">
+                           <div class="banner_taital">
+                              <h1 class="outstanding_text">New Release </h1>
+                              <h1 class="coffee_text">Plajoe Topografi</h1>
+                              <p class="there_text">Penyedia Jasa Topografi Terbaik Di Indonesia </p>
+                              <div class="learnmore_bt"><a href="https://plajoetopografi.my.id/" target="_blank">Kunjungi</a></div>
                            </div>
                         </div>
                      </div>
@@ -84,7 +96,7 @@
                               <h1 class="outstanding_text">New Release</h1>
                               <h1 class="coffee_text">Plajoe Entertainment</h1>
                               <p class="there_text">Abadikan Momen, Ukir Karya Seni, Ciptakan Mahakarya </p>
-                              <div class="learnmore_bt"><a href="https://www.instagram.com/plajoe.entertainment/" target="_blank">Learn More</a></div>
+                              <div class="learnmore_bt"><a href="https://www.instagram.com/plajoe.entertainment/" target="_blank">Kunjungi</a></div>
                            </div>
                         </div>
                      </div>
@@ -96,7 +108,7 @@
                               <h1 class="outstanding_text">Coming Soon </h1>
                               <h1 class="coffee_text">Plajoe Printing</h1>
                               <p class="there_text">Plajoe Printing Slalu ada untuk anda </p>
-                              <div class="learnmore_bt"><a href="#">Learn More</a></div>
+                              <div class="learnmore_bt"><a href="#">Segera Hadir</a></div>
                            </div>
                         </div>
                      </div>
