--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                               <h1 class="outstanding_text">Coming Soon </h1>
                               <h1 class="coffee_text">Plajoe Printing</h1>
                               <p class="there_text">Plajoe Printing Slalu ada untuk anda </p>
-                              <div class="learnmore_bt"><a href="#">Segera Hadir</a></div>
+                              <div class="learnmore_bt"><a href="#">Kunjungi</a></div>
                            </div>
                         </div>
                      </div>
